--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,37 @@
 spring.application.name=SLKA-FixedEquip-DBDB
-#  VDS DB
-spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.primary.username=TMS_V2
-spring.datasource.primary.password=6885!
+##  VDS DB
+#spring.datasource.primary.jdbc-url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.primary.username=TMS_V2
+#spring.datasource.primary.password=6885!
+#spring.datasource.primary.driver-class-name=org.postgresql.Driver
+#TEST_SRLK
+spring.datasource.primary.jdbc-url=jdbc:postgresql://211.189.132.159:15432/test_srlk
+spring.datasource.primary.username=test_wonbae
+spring.datasource.primary.password=srlk1231!
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
+
 # LKDB
 spring.datasource.secondary.jdbc-url=jdbc:postgresql://211.189.132.15:4143/LKDB
 spring.datasource.secondary.username=LKDB
 spring.datasource.secondary.password=LKDB
 spring.datasource.secondary.driver-class-name=org.postgresql.Driver
 
+# JPA and Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Hibernate SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Hibernate
+# Hibernate batch settings
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+# Logging configuration
 logging.level.org.hibernate.SQL=info
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Resilience4j Retry Configuration
+resilience4j.retry.instances.batchInsert.max-attempts=3
+resilience4j.retry.instances.batchInsert.wait-duration=1s
