--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,29 +9,25 @@ spring.datasource.primary.jdbc-url=jdbc:postgresql://211.189.132.159:15432/test_
 spring.datasource.primary.username=test_wonbae
 spring.datasource.primary.password=srlk1231!
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
-
 # LKDB
 spring.datasource.secondary.jdbc-url=jdbc:postgresql://211.189.132.15:4143/LKDB
 spring.datasource.secondary.username=LKDB
 spring.datasource.secondary.password=LKDB
 spring.datasource.secondary.driver-class-name=org.postgresql.Driver
-
 # JPA and Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.properties.hibernate.default_schema=srlk
 # Hibernate batch settings
-spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-
 # Logging configuration
 logging.level.org.hibernate.SQL=info
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
 # Resilience4j Retry Configuration
 resilience4j.retry.instances.batchInsert.max-attempts=3
 resilience4j.retry.instances.batchInsert.wait-duration=1s
