--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
 
     //lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-    //test
+
+    //test spring
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //test lombok
+    testCompileOnly 'org.projectlombok:lombok:1.18.24'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     //spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
