테스트 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=SLKA-FixedEquip-DBDB
 #spring.datasource.primary.password=6885!
 #spring.datasource.primary.driver-class-name=org.postgresql.Driver
 #TEST_SRLK
-spring.datasource.primary.jdbc-url=jdbc:postgresql://211.189.132.159:15432/test_srlk
-spring.datasource.primary.username=test_wonbae
-spring.datasource.primary.password=srlk1231!
+spring.datasource.primary.jdbc-url=jdbc:postgresql://211.189.132.159:15433/test_srlk3
+spring.datasource.primary.username=postgres
+spring.datasource.primary.password=postgres
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
 # LKDB
 spring.datasource.secondary.jdbc-url=jdbc:postgresql://211.189.132.15:4143/LKDB
