--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,14 +20,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=srlk
+
 # Hibernate batch settings
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-# Logging configuration
-logging.level.org.hibernate.SQL=info
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
+# Logging configuration (?? ??)
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 # Resilience4j Retry Configuration
 resilience4j.retry.instances.batchInsert.max-attempts=3
 resilience4j.retry.instances.batchInsert.wait-duration=1s
