# 최소 유휴 커넥션 수 spring.datasource.hikari.minimum-idle=35 # 최대 풀 사이즈(커넥션) spring.datasource.hikari.maximum-pool-size=70

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,30 @@ spring.datasource.secondary.jdbc-url=jdbc:postgresql://211.189.132.15:4143/LKDB
 spring.datasource.secondary.username=LKDB
 spring.datasource.secondary.password=LKDB
 spring.datasource.secondary.driver-class-name=org.postgresql.Driver
+# Server Port Configuration
+server.port=8081
 # JPA and Hibernate configuration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=srlk
+
+# HikariCP Settings
+# DB ?? ???? ??
+spring.datasource.hikari.connection-timeout=40000
+# ?? ?? ??? ?
+spring.datasource.hikari.minimum-idle=35
+# ?? ? ???(???)
+spring.datasource.hikari.maximum-pool-size=70
+# ?? ????
+spring.datasource.hikari.idle-timeout=600000
+# DB ?? ?? ??
+spring.datasource.hikari.auto-commit=false
+# 500??? keepalive
+spring.datasource.hikari.keepalive-time=500000
+# Set HikariCP logging level to DEBUG
+logging.level.com.zaxxer.hikari=INFO
 
 # Hibernate batch settings
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
