상세로그 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,6 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.auto-commit=false
 # 500??? keepalive
 spring.datasource.hikari.keepalive-time=500000
-# Set HikariCP logging level to DEBUG
-logging.level.com.zaxxer.hikari=INFO
 
 # Hibernate batch settings
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
@@ -50,3 +48,25 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 # Resilience4j Retry Configuration
 resilience4j.retry.instances.batchInsert.max-attempts=3
 resilience4j.retry.instances.batchInsert.wait-duration=1s
+
+########################################################################################################################
+
+## ?? ??: ?? ?? ??
+## Enable detailed logging for transactions
+#logging.level.org.springframework.transaction=TRACE
+#
+## Enable detailed logging for JDBC operations
+#logging.level.org.springframework.jdbc=TRACE
+#logging.level.org.springframework.orm.jpa=TRACE
+#
+## Enable detailed logging for HikariCP
+#logging.level.com.zaxxer.hikari=info
+#
+## Enable detailed logging for JPA
+#logging.level.org.hibernate.engine.transaction=TRACE
+#logging.level.org.hibernate.engine.transaction.spi=TRACE
+#logging.level.org.hibernate.engine.jdbc.spi=TRACE
+#logging.level.org.hibernate.engine.jdbc.batch.internal=TRACE
+#logging.level.org.hibernate.jdbc=TRACE
+
+
