--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
 
     // postgresql
-    runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'org.postgresql:postgresql:42.7.2'
 
     //  Logback 구현체 추가
     implementation 'ch.qos.logback:logback-classic:1.4.14'
