--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,36 +22,33 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_schema=srlk
-
 # HikariCP Settings
-# DB ?? ???? ??
+# DB \uC5F0\uACB0 \uD0C0\uC784\uC544\uC6C3 \uC124\uC815
 spring.datasource.hikari.connection-timeout=40000
-# ?? ?? ??? ?
-spring.datasource.hikari.minimum-idle=35
-# ?? ? ???(???)
-spring.datasource.hikari.maximum-pool-size=70
-# ?? ????
+# \uCD5C\uC18C \uC720\uD734 \uCEE4\uB125\uC158 \uC218
+spring.datasource.hikari.minimum-idle=10
+# \uCD5C\uB300 \uD480 \uC0AC\uC774\uC988(\uCEE4\uB125\uC158)
+spring.datasource.hikari.maximum-pool-size=20
+# \uC720\uD734 \uD0C0\uC784\uC544\uC6C3
 spring.datasource.hikari.idle-timeout=600000
-# DB ?? ?? ??
+# DB \uC790\uB3D9 \uCEE4\uBC0B \uC124\uC815
 spring.datasource.hikari.auto-commit=false
-# 500??? keepalive
+# 500\uCD08\uB9C8\uB2E4 keepalive
 spring.datasource.hikari.keepalive-time=500000
-
 # Hibernate batch settings
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-# Logging configuration (?? ??)
-logging.level.org.hibernate.SQL=error
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
-# Resilience4j Retry Configuration
-resilience4j.retry.instances.batchInsert.max-attempts=3
-resilience4j.retry.instances.batchInsert.wait-duration=1s
-
+# \uCFFC\uB9AC \uB85C\uAE45 \uCD9C\uB825 Hibernate SQL and type trace logging
+logging.level.org.hibernate.SQL=info
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
+# Schedule cron expressions
+schedule.cron=* * * * * *
+schedule.keepAlivePrimaryCron=0/30 * * * * *
+schedule.keepAliveSecondaryCron=0/30 * * * * *
 ########################################################################################################################
-
-## ?? ??: ?? ?? ??
+## \uCD94\uAC00 \uC124\uC815: \uC0C1\uC138 \uB85C\uADF8 \uCD9C\uB825
 ## Enable detailed logging for transactions
 #logging.level.org.springframework.transaction=TRACE
 #
@@ -68,5 +65,3 @@ resilience4j.retry.instances.batchInsert.wait-duration=1s
 #logging.level.org.hibernate.engine.jdbc.spi=TRACE
 #logging.level.org.hibernate.engine.jdbc.batch.internal=TRACE
 #logging.level.org.hibernate.jdbc=TRACE
-
-
