--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 logging.level.org.hibernate.SQL=info
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=info
 # Schedule cron expressions
-schedule.cron=* * * * * *
+schedule.cron=0 0 1 * * *
 schedule.keepAlivePrimaryCron=0/30 * * * * *
 schedule.keepAliveSecondaryCron=0/30 * * * * *
 ########################################################################################################################
