--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,5 +1,5 @@
-# application-prod.properties
-spring.application.name=SLKA-FixedEquip-DBDB-Prod
+# application-real.properties
+spring.application.name=SLKA-FixedEquip-DBDB-real
 ##  VDS DB
 spring.datasource.primary.jdbc-url=jdbc:postgresql://?:5432/postgres
 spring.datasource.primary.username=TMS_V2
