현지 서버 접속정보 (real) 추가

--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -6,7 +6,7 @@ spring.datasource.primary.username=TMS_V2
 spring.datasource.primary.password=6885!
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
 # LKDB
-spring.datasource.secondary.jdbc-url=jdbc:postgresql://211.189.132.15:4143/LKDB
-spring.datasource.secondary.username=LKDB
-spring.datasource.secondary.password=LKDB
+spring.datasource.secondary.jdbc-url=jdbc:postgresql://172.168.10.51:25432/LKDB
+spring.datasource.secondary.username=lkdb
+spring.datasource.secondary.password=@2SrLk1!
 spring.datasource.secondary.driver-class-name=org.postgresql.Driver
