현지 서버 접속정보 (real) 추가, 현지 에 올리기 최적화

--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,7 +1,7 @@
 # application-real.properties
 spring.application.name=SLKA-FixedEquip-DBDB-Real
 ##  VDS DB
-spring.datasource.primary.jdbc-url=jdbc:postgresql://?:5432/postgres
+spring.datasource.primary.jdbc-url=jdbc:postgresql://172.168.10.101:5432/postgres
 spring.datasource.primary.username=TMS_V2
 spring.datasource.primary.password=6885!
 spring.datasource.primary.driver-class-name=org.postgresql.Driver
